initial styling of technical skill section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-light rounded">
-  <ul class="navbar-nav">
-    <a class="navbar-brand" routerLink="/home">Cassandre Henriquez</a>
-    <li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
-    <li class="nav-item"><a class="nav-link"routerLink="/resume">Resume</a></li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="javascript://" id="navbardrop" data-toggle="lifeStyle-dropdown">Lifestyle</a>
-      <div class="dropdown-menu" aria-labelledby="lifeStyle-dropdown">
-          <a class="dropdown-item" href="#">Living my Best Life</a>
-          <a class="dropdown-item" href="#">Hair</a>
-          <a class="dropdown-item" href="#">Heritage</a>
-      </div>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerLink="/home">Cassandre Henriquez</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home" >Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/resume">Resume</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Life style
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="javascript:void(0)">Living my Best Life</a>
+          <a class="dropdown-item" href="javascript:void(0)">Hair</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="javascript:void(0)">Heritage</a>
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
 <div class="hero-section">
   
