--- a/src/app/technical-skills/technical-skills.component.html
+++ b/src/app/technical-skills/technical-skills.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="col-sm-12">
     <h5 class="sub-title">
       <svg class="bi bi-tools" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -8,69 +8,18 @@
       TECHNICAL SKILLS</h5>
     <hr>
 </div>
-<div class="col-sm-12">
-<table>
-  <th>Technologies:</th>
-  <th>Methodologies:</th>
-  <th>Development tools:</th>
-  <tbody>
-    <tr>
-      <td >Vue.js</td>
-      <td >Agile (Lean/Scrum)</td>
-      <td>Visual Studio Code</td>
-    </tr>
-    <tr>
-      <td >Angular 5</td>
-      <td >Waterfall</td>
-      <td>Atom</td>
-    </tr>
-    <tr>
-      <td>TypeScript with ES6 features</td>
-      <td></td>
-      <td>Brackets</td>
-    </tr>
-    <tr>
-      <td>jQuery</td>
-      <td></td>
-      <td>GitHub/Git</td>
-    </tr>
-    <tr>
-      <td>HTML5</td>
-      <td></td>
-      <td>BitBucket</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>SCSS</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Node.js</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Chai.js</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Mocha.js</td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>Jasmine.js</td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-  
-</table>
+<div class="row no-gutters" id="table-content">
+  <div class="col-sm-12 col-lg-4">
+    <h5>Technologies</h5>
+    <div *ngFor="let tech of technologies"> {{ tech }}</div>
+  </div>
+  <div class="col-sm-12 col-lg-3">
+    <h5>Methodologies</h5>
+      <div *ngFor="let method of methodologies"> {{ method }}</div>
+  </div>
+  <div class="col-sm-12 col-lg-4">
+    <h5>Tools</h5>
+    <div *ngFor="let tool of developmentTools"> {{ tool }}</div>
+  </div>
 </div>
 </div>
