--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,14 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss"; 
+// @import "../node_modules/bootstrap/scss/bootstrap.scss"; 
 /* You can add global styles to this file, and also import other style files */
 .container {
-    padding-top: 15px;
-    .sub-title {
-        color: #00003f;
-        svg {
-            padding-top: 5px;
-        }
-        letter-spacing: 1px;
-        font-weight: 200;
-    } 
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.sub-title {
+    color: #00003f;
+    svg {
+        padding-top: 5px;
+    }
+    letter-spacing: 1px;
+    font-weight: 200;
 }
