adding education section for resume

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,19 @@
-<div class="container">
+<div class="row no-gutters" id="eduction-styling">
+    <div class="col-sm-12">
+        <h5 class="sub-title">
+            <svg class="bi bi-book-half" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M12.786 1.072C11.188.752 9.084.71 7.646 2.146A.5.5 0 0 0 7.5 2.5v11a.5.5 0 0 0 .854.354c.843-.844 2.115-1.059 3.47-.92 1.344.14 2.66.617 3.452 1.013A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.276-.447L15.5 2.5l.224-.447-.002-.001-.004-.002-.013-.006-.047-.023a12.582 12.582 0 0 0-.799-.34 12.96 12.96 0 0 0-2.073-.609zM15 2.82v9.908c-.846-.343-1.944-.672-3.074-.788-1.143-.118-2.387-.023-3.426.56V2.718c1.063-.929 2.631-.956 4.09-.664A11.956 11.956 0 0 1 15 2.82z"/>
+                <path fill-rule="evenodd" d="M3.214 1.072C4.813.752 6.916.71 8.354 2.146A.5.5 0 0 1 8.5 2.5v11a.5.5 0 0 1-.854.354c-.843-.844-2.115-1.059-3.47-.92-1.344.14-2.66.617-3.452 1.013A.5.5 0 0 1 0 13.5v-11a.5.5 0 0 1 .276-.447L.5 2.5l-.224-.447.002-.001.004-.002.013-.006a5.017 5.017 0 0 1 .22-.103 12.958 12.958 0 0 1 2.7-.869z"/>
+            </svg>
+          EDUCATION</h5>
+        <hr>
+    </div>
+    <div class="col-sm-12">
+        <p><img src="../../assets/owlhead-logo.png" alt="FAU owl head logo"><strong>Florida Atlantic University </strong>, Boca Raton, FL</p>
+        <p style="margin-left: 1.8em"><strong>Bachelor of Science in Computer Science </strong>, May 2016</p>
+    </div>
+</div>
+<div class="row no-gutters">
     <div class="col-sm-12">
         <h5 class="sub-title">
             <svg class="bi bi-briefcase-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -11,8 +26,7 @@
     <div class="col-sm-12">
         <ul class="timeline">
             <h5 >Software Engineer II at Bank of America</h5>
-            <li class="date-range">Nov 2017 - Present</li>
-            <br>
+            <p class="date-range">Nov 2017 - Present</p>
             <li>Overview: Work on the Online Banking application under the transfer and payments pages. </li>
             <li>Experienced with navigating large Git repositories and resolving conflicts.</li>
             <li>Participate in feature grooming, code reviews, training sessions, and interviews</li>
@@ -21,8 +35,7 @@
     <div class="col-sm-12 ">
         <ul class="timeline">
             <h5>Senior Associate Web Developer at Synechron</h5>
-            <li class="date-range"> Feb 2017 - Oct 2018</li>
-            <br>
+            <p class="date-range"> Feb 2017 - Oct 2018</p>
             <h6 class="sub-title">> Client: Project 2- Wells Fargo (Front-end Developer/Business Analysis)</h6>
             <li>Overview: Web application rewrite from an Ruby on Rails to Angular 5 and Java.</li>
             <li>Assumed the role of a BA in order to gather information and understand business requirements. This includes part taking in meetings covering user stories; 
@@ -54,8 +67,7 @@
     <div class="col-sm-12  timeline">
         <ul class="timeline">
             <h5>Web Developer Intern at Synechron</h5>
-            <li class="date-range"> Jun 2016 - Aug 2016</li>
-            <br>
+            <p class="date-range"> Jun 2016 - Aug 2016</p>
             <li>Design a single page application in which displays book details from the database to the user. Implemented CRUD (Create, Read, Update, Delete) 
                 functionalities for the front-end and back-end.</li>
             <li> <a class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/books_angular "><svg class="bi bi-code-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
