--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -2,23 +2,39 @@
     background-color: #f2f2f2;
     padding: 15px 0
 }
+#eduction-styling {
+    background-color: #ecf1f1;
+    .bi-book-half {
+        padding-top: 0;
+    }
+    img {
+        height: 1em;
+        width: 1.5em;
+        margin-right: 5px ;
+    }
+    p {
+        margin-bottom: 5px;
+        
+    }
+    // strong:nth-clid(2) {
+    //     margin-left: 1.5em;
+    // }
+}
 ul.timeline {
-    list-style-type: none;
-    // position: relative;
-    padding-right: 0;
+    list-style-type: circle;
+    margin-left: 10px;
     &:before {
         content: ' ';
         background: #d4d9df;
         display: inline-block;
         position: absolute;
-        left: 29px;
+        left: 19px;
         width: 2px;
         height: 100%;
         z-index: 400;
     }
     h5 {
         margin: 0;
-        padding-left: 5px;
         &:before {
             content: ' ';
             background: white;
@@ -26,7 +42,7 @@ ul.timeline {
             position: absolute;
             border-radius: 50%;
             border: 3px solid #22c0e8;
-            left: 20px;
+            left: 10px;
             width: 20px;
             height: 20px;
             z-index: 400;
@@ -41,9 +57,4 @@ ul.timeline {
 }
 .resume-content {
     padding-left: 0;
-    // .btn {
-    //     svg {
-    //         padding-top: 5px;
-    //     }
-    // }
 }
