--- a/src/app/technical-skills/technical-skills.component.html
+++ b/src/app/technical-skills/technical-skills.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="row no-gutters">
   <div class="col-sm-12">
     <h5 class="sub-title">
       <svg class="bi bi-tools" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -8,7 +8,7 @@
       TECHNICAL SKILLS</h5>
     <hr>
 </div>
-<div class="row no-gutters" id="table-content">
+<div class="row" id="table-content">
   <div class="col-sm-12 col-lg-4">
     <h5>Technologies</h5>
     <div *ngFor="let tech of technologies"> {{ tech }}</div>
