--- a/src/app/technical-skills/technical-skills.component.scss
+++ b/src/app/technical-skills/technical-skills.component.scss
@@ -1,16 +1,15 @@
-.container-fluid {
+.row {
     background-color: #ecf1f1;
-    padding: 20px 10.5%;
-    // padding-right: 10.5%;
-    // padding-left: 10.5%;
 }
 #table-content {
-    padding: 0 15px;
+    padding: 0px 15px;
+    width: 100%;
     .col-sm-12 {
         border: 1px solid gray;
         border-radius: 5%;
         padding: 10px 10px;
         margin-right: 5px;
+        margin-bottom: 5px;
         h5 {
             border-bottom: 1px solid gray;
         }
