updating home page styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="row content-stye">
-  <div class="col-xs-12 col-md-2">
-    <h3 class="title" id="section-title ">About me</h3>
+  <div class="col-sm-12 col-md-6" id="photo-container">
+    <h3 class="title sub-title">About me</h3>
+    <hr>
+    <img src="../../assets/IMG_3118.jpg" alt="">
   </div>
-  <div class="col-xs-12 col-md-10 content-text">
+  <div class="col-sm-12 col-md-6 content-container">
       <p>&nbsp;&nbsp;Hello world! My name is Cassandre Henriquez a Haitian-American millennial woman. 
         I was born in Brooklyn, NY on August 16th 1992. At the age of 4 my family and I moved to Port-au-Prince, 
         Ayiti(Haiti). I grew in Haiti and traveled to the states during summer  vacations. While living in Haiti I 
