--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,44 +22,55 @@
           0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
         animation: shine 2s forwards, flicker 3s 5;
       }
+      .flicker {
+        animation: shine-color 2s forwards, shine 2s forwards,  blink-color 10s 1s infinite, blink 3s 2s infinite;
+      }
       
-      @keyframes blink {
+      .fast-flicker {
+        animation: shine-color 2s forwards, shine 2s forwards,  blink-color 10s 1s infinite, blink 10s 1s infinite;
+      }
+      @keyframes blink-color {
         0%,
         22%,
         36%,
         75% {
           color: #ffe6ff;
-          text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
-            -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
-            0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
         }
         28%,
         33% {
           color: #ff65bd;
-          text-shadow: none;
         }
         82%,
         97% {
           color: #ff2483;
+        }
+      } 
+      @keyframes blink {
+        0%,
+        75% {
+          text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+            -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+            0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
+        }
+        97% {
           text-shadow: none;
         }
       }
-      
-      .flicker {
-        animation: shine 2s forwards, blink 3s 2s infinite;
-      }
-      
-      .fast-flicker {
-        animation: shine 2s forwards, blink 10s 1s infinite;
-      }
-      
-      @keyframes shine {
+      @keyframes shine-color {
         0% {
           color: #6b1839;
-          text-shadow: none;
         }
         100% {
           color: #ffe6ff;
+        }
+      }
+      @keyframes shine {
+        0% {
+          // color: #6b1839;
+          text-shadow: none;
+        }
+        100% {
+          // color: #ffe6ff;
           text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
             -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
             0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
