bug fix for andriod chrome & code clean up

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/resume">Resume</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Life style
         </a>
@@ -22,7 +22,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="javascript:void(0)">Heritage</a>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
