--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row content-stye">
+<div class="row no-gutters content-stye">
   <div class="col-sm-12 col-md-6" id="photo-container">
     <h3 class="title sub-title">About me</h3>
     <hr>
