updating styling for nav bar and footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,12 @@
-#home-title
-{
+#home-title {
     font-family: FreeMono,sans-serif;
     //color: white;
     text-align: center;
     margin-top: 15%;
+}
+footer div.col-sm-12 {
+    height: 100px;
+    padding: 20px;
+    line-height: 4;
+    text-align: center;
 }
