--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <header class="header-style">
     <app-header></app-header>
-  </header>
-<footer></footer>
+</header>
 <router-outlet></router-outlet>
+<footer>
+  <div class="row">
+    <div class="col-sm-12">
+      <p>©2020 Cassandre Henriquez</p>
+    </div>
+  </div>
+</footer>
