--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,10 +4,11 @@
     .content-container {
         // font-family: "";
         padding: 30px 30px;
-        background-color: #f2f2f2;
+        background-color: #ecf1f1;
         animation: slideLeft 2s ease-in-out forwards;
         #signature {
             font-family: cursive;
+            font-size: 20px;
         }
         
     }
