adding contact me section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </header>
 <router-outlet></router-outlet>
 <footer>
-  <div class="row">
+  <div class="row no-gutters">
     <div class="col-sm-12">
       <p>©2020 Cassandre Henriquez</p>
     </div>
