--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,4 +28,5 @@
         Now keep it mind this is my personal project so the terms are set by me. Hope I can inspire someone 
         out there while still figuring out who I am. </p> -->
   </div>
-</div>  
+</div>
+<app-contact-me></app-contact-me>  
