--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
     .content-container {
         // font-family: "";
         padding: 30px 30px;
-        background-color: #ecf1f1;
+        background-color: #f6fbfb;
         animation: slideLeft 2s ease-in-out forwards;
         #signature {
             font-family: cursive;
