--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -1,10 +1,58 @@
 .row#contact-me-wrapper {
-    h3 {
-        padding-left: 10.5%;
-    }
     padding-top: 20px;
+    padding-bottom: 20px;;
     background-color: #ecf1f1;
-    .col-md-6 {
-        padding: 20px 10.5%;
+    h3 {
+        padding-left: 30px;
     }
+    hr {
+        border-color: #22c0e8;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .wall-art {
+        text-align: center;
+        img {
+            height: 15em;
+            animation: slideLeft 2s ease-in-out forwards;
+        }
+    }
+    @keyframes slideLeft{
+        0% {
+        transform: translateX(-100px);
+        }
+        100% {
+        transform: translateX(0px);
+        }
+    }
+    
+    .col-md-6 {
+        padding: 20px;
+        .form-control {
+            // border-radius: 1.25rem;
+        }
+        .ng-dirty.ng-invalid:not(form)  {
+            border: 1px solid #a94442;
+        }
+        .error-message {
+            padding-top: 10px;
+            color: red;
+            display: flex;
+            svg {
+                margin-top: 4px;
+                margin-right: 4px;
+            }
+            p {
+                margin-bottom: 0;
+            }
+        }
+        button {
+            margin-top: 40px;
+        }
+    } 
+ @media screen and (max-width: 767px) {
+    .wall-art {
+        display: none;
+    }
+ }  
 }
