--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -7,7 +7,7 @@
         <img src="../../assets/pngwave.png" alt="email logo">
     </div>
     <div class="col-sm-12 col-md-6">
-        <form netlify #contactMe="ngForm" >
+        <form data-netlify="true" #contactMe="ngForm" >
             <div class="form-group">
                 <input #firstName="ngModel" [(ngModel)]="model.firstName" name="firstName" type="text"
                     class="form-control" id="firstName" placeholder="First name" required>
