--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-portfolio></app-portfolio>
 <div class="row no-gutters content-stye" id="about-me-wrapper">
   <div class="col-sm-12 col-md-6 content-container">
     <h3 class="title sub-title">About me</h3>
