--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <footer>
   <div class="row no-gutters">
     <div class="col-sm-12">
-      <p>©2020 Cassandre Henriquez</p>
+      <p>©2020 Cassandre Henriquez | All rights reserved</p>
     </div>
   </div>
 </footer>
