--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,5 +9,9 @@ footer div.col-sm-12 {
     padding: 20px;
     line-height: 4;
     text-align: center;
-    background-color: #d4e4e4;
+    background-color: black;
+    color: #ffe6ff;
+    text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+        -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
+        0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
 }
