--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -1,7 +1,7 @@
 .row#contact-me-wrapper {
     padding-top: 20px;
     padding-bottom: 20px;;
-    background-color: #ecf1f1;
+    background-color: #d4e4e4;
     h3 {
         padding-left: 30px;
     }
@@ -28,9 +28,6 @@
     
     .col-md-6 {
         padding: 20px;
-        .form-control {
-            // border-radius: 1.25rem;
-        }
         .ng-dirty.ng-invalid:not(form)  {
             border: 1px solid #a94442;
         }
