--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -8,41 +8,36 @@ h3 {
     margin: 0 !important;
     padding: 20px 20px 50px 20px;
     height: auto;
-    // min-height: 500px;
     justify-content: center;
     display: flex;
     .portfolio-item {
-        // border: 2px solid #22c0e8;
+        border: 1px solid #22c0e8;
         border-radius: 2%;
-        color: #d3509a;
-        box-shadow: 0 0 1.5rem #d3509a;
-        /* position: relative; */
-        /* top: 10%; */
+        color: #28a2c1;
         height: 50%;
         margin-right: 50px;
         padding: 40px;
         text-align: center;
         &:hover {
-            color: whitesmoke;
-            // background-color: black;
             box-shadow: none;
-            background-color: #d3509a;
-            // background-image: linear-gradient(315deg, #c7e9fb 0%, #e61d8c 74%);
+            background-color: black;
+            border: none;
             .btn {
-                color: whitesmoke;
-                background-color: #d3509a;
-                border-color: whitesmoke;
+                color: #28a2c1;
+                background-color: black;
+                border-color: #28a2c1;
             }
         }
     }
     .btn {
-        color: #d3509a;
-        border-color: #d3509a;
+        color: #28a2c1;
+        background-color: white;
+        border-color: #28a2c1;
         margin-right: 20px;
         &:hover {
-            color: whitesmoke;
-            border-color: whitesmoke;
-            background-color: #d3509a;
+            color: #28a2c1;
+            background-color: black;
+            border-color: #28a2c1;
         }
     }
     @media screen and (max-width: 767px) {
