--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -1,12 +1,13 @@
 .row#contact-me-wrapper {
     padding-top: 20px;
     padding-bottom: 20px;;
-    background-color: #d4e4e4;
+    // background-color: #d4e4e4;
+    background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
     h3 {
         padding-left: 30px;
     }
     hr {
-        border-color: #22c0e8;
+        // border-color: #22c0e8;
         margin-left: 30px;
         margin-right: 30px;
     }
@@ -45,6 +46,14 @@
         }
         button {
             margin-top: 40px;
+            background-color: #28a2c1;
+            border-color: #28a2c1;
+            font-weight: bold;
+            // font-family: "Courier New";
+            letter-spacing: 2px;
+            &:hover {
+                opacity: 0.5;
+            }
         }
     } 
  @media screen and (max-width: 767px) {
