updating styling for home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <app-portfolio></app-portfolio>
 <div class="row no-gutters content-stye" id="about-me-wrapper">
-  <div class="col-sm-12 col-md-6 content-container">
+  <div class="col-sm-12" id="about-me-title">
     <h3 class="title sub-title">About me</h3>
     <hr>
+  </div>
+  <div class="col-sm-12 col-md-6 content-container">
     <p>&nbsp;&nbsp;Hello world! My name is Cassandre Henriquez a Haitian-American millennial woman.
       I was born in Brooklyn, NY, but grow up in Port-au-Prince,Ayiti(Haiti).After the devastating 2010 Haitian
       earthquake, I moved to Wellington, Palm Beach,
