--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,12 @@
+#about-me-title {
+  padding: 20px 30px 0 30px;
+}
 .content-stye {
     color: slategray;
     padding: 0;
+    background-image: linear-gradient(to bottom, white, #e6f3f3);
     .content-container {
-        // font-family: ""
-        background-color: #f6fbfb;;
-        padding: 30px 30px;
-        // animation: slideLeft 2s ease-in-out forwards;
+        padding: 20px 30px;
         #signature {
             font-family: cursive;
             font-size: 20px;
@@ -17,33 +18,21 @@
        }  
     }
     #photo-container {
-        padding: 30px 10px;
-        background-color: #ecf1f1;
+        padding: 20px 10px 30px 10px;
         text-align: center;
         img {
             margin-top: 10px;
             height: 29em;
             width: 23em;
-            box-shadow: -2px 2px 20px 5px #f9a8d6;
+            box-shadow: -2px 2px 20px 9px #22c0e8;
         }
-        // animation: slideRight 2s ease-in-out forwards;
     }
     hr {
-        border-color: #22c0e8;
         margin-bottom: 2rem;
         animation: slideLeft 2s ease-in-out forwards;
 
     }
 }
-
-// @keyframes slideRight{
-//     0% {
-//       transform: translateX(-30px);
-//     }
-//     100% {
-//       transform: translateX(0px);
-//     }
-//   }
   @keyframes slideLeft {
     0% {
       width: 0%;
@@ -55,4 +44,9 @@
       width: 100%
     }
   }
- 
+@media screen and (max-width: 767px) {
+  #photo-container {
+    padding-top: 0;
+    padding-bottom: 40px;
+  }
+}
