--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-
+<div class="portfolio-container">
 <div class="col-sm-12">
     <h3 class="sub-title">Portfolio</h3>
     <hr>
@@ -19,4 +19,5 @@
         <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
         <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
     </div>
+</div>
 </div>
