--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,16 +1,20 @@
 hr {
-    border-color: #22c0e8;
+    // border-color: #22c0e8;
 }
 h3 {
     padding-top: 20px;
 }
+.portfolio-container {
+    min-height: 350px;
+}
 #portfolio-wrapper {
     margin: 0 !important;
-    padding: 20px 20px 50px 20px;
+    padding: 20px 20px 0 20px;
     height: auto;
     justify-content: center;
     display: flex;
     .portfolio-item {
+        box-shadow: -2px 2px 11px 2px #22c0e8;
         border: 1px solid #22c0e8;
         border-radius: 2%;
         color: #28a2c1;
@@ -19,31 +23,35 @@ h3 {
         padding: 40px;
         text-align: center;
         &:hover {
+            color: white;
+            background-color: #28a2c1;
             box-shadow: none;
-            background-color: black;
             border: none;
             .btn {
                 color: #28a2c1;
-                background-color: black;
+                background-color: white;
                 border-color: #28a2c1;
             }
         }
     }
     .btn {
-        color: #28a2c1;
-        background-color: white;
+        color: white;
+        background-color: #28a2c1;;
         border-color: #28a2c1;
-        margin-right: 20px;
+        margin-right: 15px;
         &:hover {
             color: #28a2c1;
-            background-color: black;
+            background-color: white;
             border-color: #28a2c1;
         }
     }
     @media screen and (max-width: 767px) {
-        .portfolio-item{
+        .portfolio-item {
             margin-right: 0;
             margin-bottom: 50px;
+        }
+        .btn {
+            margin-bottom: 15px;
         }
     }
 }
