--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,14 @@
     padding-bottom: 20px;
 }
 .sub-title {
-    color: #00003f;
+    color: #ff65bd;
     svg {
         padding-top: 5px;
     }
     letter-spacing: 1px;
-    font-weight: 200;
+    font-weight: 300;
+}
+hr {
+    border-top-width: 3px;
+    border-color: #ff65bd;
 }
