adding mattr page to portfolio

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,17 +7,17 @@
     <div class="col-sm-12 col-md-3 portfolio-item">
         <h4>Build a Bot</h4>
         <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
-        <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">Git hub</a>
+        <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">GitHub</a>
+    </div>
+    <div class="col-sm-12 col-md-3 portfolio-item">
+        <h4>Mattr</h4>
+        <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
+        <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">GitHub</a>
     </div>
     <div class="col-sm-12 col-md-3 portfolio-item">
         <h4>Tic Tac Toe</h4>
         <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
         <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a>
-    </div>
-    <div class="col-sm-12 col-md-3 portfolio-item">
-        <h4>Coming Soon</h4>
-        <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
-        <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
     </div>
 </div>
 </div>
