minor styling updates

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,7 @@
 .navbar {
   box-shadow: -2px 2px 20px 5px #22c0e8;
+  font-family: "Courier New";
+  color: #22c0e8;
 }
 .hero-section {
     height: 450px;
