--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -17,7 +17,7 @@ hr {
     }
 }
 #eduction-styling {
-    background-image: linear-gradient(to bottom, white, #e6f3f3);
+    // background-image: linear-gradient(to bottom, white, #e6f3f3);
     // background-color: #f2f2f2;
     .bi-book-half {
         padding-top: 0;
@@ -33,8 +33,8 @@ hr {
     }
 }
 #work-history {
-    background-color: #e6f3f3;
-    // background-image: linear-gradient(to bottom, white, #e6f3f3);
+    // background-color: #e6f3f3;
+    background-image: linear-gradient(to bottom, white, #e6f3f3);
 }
 ul.timeline {
     list-style-type: circle;
