--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,31 +5,22 @@
     <hr>
   </div>
   <div class="col-sm-12 col-md-6 content-container">
-    <p>&nbsp;&nbsp;Hello world! My name is Cassandre Henriquez a Haitian-American millennial woman.
-      I was born in Brooklyn, NY, but grow up in Port-au-Prince,Ayiti(Haiti).After the devastating 2010 Haitian
-      earthquake, I moved to Wellington, Palm Beach,
-      FL and completed high school. I then attended a
-      community college, Palm beach state college. Once I received my AA degree I transferred to Florida
-      Atlantic University and earned my bachelors degree in Computer Science.
+    <p>&nbsp;&nbsp;Hello world! My name is Cassandre Henriquez a millennial woman whom was
+      born in Brooklyn, NY, but grew up in Haiti. After the devastating 2010
+      earthquake, I moved to Wellington, Palm Beach, FL.
+      I completed high school and attended Palm beach state college. Once I received my AA degree I transferred to Florida
+      Atlantic University and graduated with Bachelors of Science in Computer Science.
       <br><br> &nbsp; &nbsp;Honestly at first
       I was not sure which track I wanted to follow as a CS major, this IT world is so vast! It wasn’t until I took a
       course on web development that I found my niche.
-      I love the UI aspect and bring a website and web application to life. I enjoy seeing creative websites that push
+      I love the user interaction aspect and bringing a website and web application to life. I enjoy seeing creative websites that push
       my CSS
       skills.
-      <br><br> &nbsp; &nbsp; Given majority of my career is base in the FSI industry, I wanted to create this profilio
-      to showcase my skills and upskill (forever a developer's jounery). Feel free to check out my site. :)
+      <br><br> &nbsp; &nbsp;The last 3 years of career, I have worked in the FSI (Finanical Services and Insurance) industry. And I wanted to create this profilio
+      to showcase my skills and upskill (forever a developer's jounery). Feel free to check out my web site. <fa-icon [icon]="faLaughBeam"></fa-icon>
     </p>
     <p>Sincerly, </p>
     <p id="signature"> Cassnadre Henriquez</p>
-    <!--Without saying my current role is a front- end developer contractor for Wells Fargo. No worries guys 
-      I’ve created a page for my resume , please refer to it if your curious about my work experience. 
-
-      <br><br> &nbsp; &nbsp;Now on to the purpose of the website. I decided to create a website basically to build on my MEAN 
-      stack skill sets. Because I work for Wells a lot of actual code and work is not available for the public 
-      eye. It’s ok because this is where I get to show you all my hard work and it’s all on my terms. 
-      Now keep it mind this is my personal project so the terms are set by me. Hope I can inspire someone 
-      out there while still figuring out who I am. </p> -->
   </div>
   <div class="col-sm-12 col-md-6" id="photo-container">
     <img src="../../assets/IMG_3118.jpg" alt="">
