--- a/src/app/technical-skills/technical-skills.component.scss
+++ b/src/app/technical-skills/technical-skills.component.scss
@@ -1,7 +1,9 @@
 .row {
     // background-color: #d4e4e4;
-    background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
     padding: 20px 5.5%;
+}
+#skills-wrapper {
+    background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
 }
 .sub-title {
     color: #22c0e8;
